# esp-rs-monitoring

./: Cargo.toml  LICENSE  partitions.csv  sdkconfig.defaults
components/: all.h
components/shtc3_sensor/: CMakeLists.txt  shtc3_sensor.c
components/shtc3_sensor/include/: shtc3_sensor.h
modules/: Cargo.toml
modules/src/: automation_module.rs  hals.rs  http_backend.rs  lib.rs  monitoring_module.rs  wifi_module.rs
src/: esp32_rev1_oled_test.rs  get_mac.rs  main.rs  main_node.rs  main_nodev2.rs  relay_automation.rs  sensor1.rs  sensor2.rs  webserver.rs
website/field/: index.html  sa.7z  script.js  script.ts  style.css  tsconfig.json
