[package]
name = "monitoring-system"
version = "0.1.0"
authors = ["hussein"]
edition = "2021"
resolver = "2"
rust-version = "1.66"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]

default = ["all", "hal", "esp-idf-sys/native"]


pio = ["esp-idf-sys/pio"]
all = ["std", "nightly", "experimental", "embassy"]
hal = ["esp-idf-hal", "embedded-svc", "esp-idf-svc"]
std = [
    "alloc",
    "esp-idf-sys/std",
    "esp-idf-sys/binstart",
    "embedded-svc?/std",
    "esp-idf-hal?/std",
    "esp-idf-svc?/std",
]
alloc = ["embedded-svc?/alloc", "esp-idf-hal?/alloc", "esp-idf-svc?/alloc"]
nightly = [
    "embedded-svc?/nightly",
    "esp-idf-svc?/nightly",
] # Future: "esp-idf-hal?/nightly"
experimental = ["embedded-svc?/experimental", "esp-idf-svc?/experimental"]
embassy = [
    "esp-idf-hal?/embassy-sync",
    "esp-idf-hal?/critical-section",
    "esp-idf-hal?/edge-executor",
    "esp-idf-svc?/embassy-time-driver",
    "esp-idf-svc?/embassy-time-isr-queue",
]

[dependencies]
log = { version = "0.4.17", default-features = false }
esp-idf-sys = { version = "0.33", default-features = false }
esp-idf-hal = { version = "0.41", optional = true, default-features = false }
esp-idf-svc = { version = "0.46", optional = true, default-features = false }
embedded-svc = { version = "0.25", optional = true, default-features = false }

modules = {path="modules"}
json = "0.12.4"
serde = "1.0.192"
serde_json = "1.0.108"
bincode = "1.3.3"

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["components"]
bindings_header = "components/all.h"

[build-dependencies]
embuild = "0.31.2"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "mac"
path = "src/get_mac.rs"

[[bin]]
name = "main_node"
path = "src/main_nodev2.rs"

[[bin]]
name = "sensor1"
path = "src/sensor1.rs"

[[bin]]
name = "sensor2"
path = "src/sensor2.rs"


[[bin]]
name = "oled"
path = "src/esp32_rev1_oled_test.rs"



[[bin]]
name = "webserver"
path = "src/webserver.rs"


[[bin]]
name = "relays"
path = "src/relay_automation.rs"
